--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,7 @@
 @import "css/post-list.css";
 @import "css/post.css";
 @import "css/comments.css";
+@import "css/404.css";
 
 /* Make the links black */
 :root {
