feat: start rewriting css to tailwind

--- a/src/_includes/css/comments.css
+++ b/src/_includes/css/comments.css
@@ -131,7 +131,7 @@
       display: none;
     }
     .ellipsis::after {
-      content: "…";
+      content: '…';
     }
     .mention {
       text-decoration: none;
