--- a/src/_includes/css/404.css
+++ b/src/_includes/css/404.css
@@ -1,16 +1,3 @@
-/*html {*/
-/*  background: #111;*/
-/*  height: 100%;*/
-/*  color: #969696;*/
-/*  font-family: Lato, Lucida Grande, Lucida Sans Unicode, Tahoma, sans-serif;*/
-/*}*/
-
-/*body {*/
-/*  position: relative;*/
-/*  top: 50%;*/
-/*  transform: translateY(-50%);*/
-/*}*/
-
 .error-banner {
   z-index: 1;
   position: relative;
@@ -30,7 +17,7 @@
   display: inline-block;
   position: relative;
   background-repeat: no-repeat;
-  content: "";
+  content: '';
 }
 .error-banner .error-404:before, .error-banner .error-404:after {
   width: 160px;
