--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,11 @@
 /* Lume's design system */
-@import "https://unpkg.com/@lumeland/ds@0.5.2/ds.css";
+@import 'https://unpkg.com/@lumeland/ds@0.5.2/ds.css';
 
 /* Custom components */
-@import "css/navbar.css";
-@import "css/page.css";
-@import "css/post-list.css";
-@import "css/post.css";
-@import "css/comments.css";
-@import "css/404.css";
+@import 'css/navbar.css';
+@import 'css/post-list.css';
+@import 'css/comments.css';
+@import 'css/404.css';
 
 /* background */
 body {
@@ -16,7 +14,125 @@ body {
   margin: 0;
   padding: 0;
   background-color: var(--color-background);
-  background-image: linear-gradient(45deg, #000, #000 0.5%, #008f8c 0.5%, #008f8c 7.6%, #000 7.6%, #000 8.642857143%, #0fc2c0 8.642857143%, #0fc2c0 15.64285714%, #000 15.64285714%, #000 16.88571429%, #0caba8 16.88571429%, #0caba8 23.84285714%, #000 23.84285714%, #000 25%, transparent 25%), linear-gradient(-45deg, #000, #000 0.5%, #008f8c 0.5%, #008f8c 7.6%, #000 7.6%, #000 8.642857143%, #0fc2c0 8.642857143%, #0fc2c0 15.64285714%, #000 15.64285714%, #000 16.88571429%, #0caba8 16.88571429%, #0caba8 23.84285714%, #000 23.84285714%, #000 25%, transparent 25%), linear-gradient(45deg, transparent 73.85714286%, #000 73.85714286%, #000 75%, transparent 75%), linear-gradient(-45deg, transparent 73.85714286%, #000 73.85714286%, #000 75%, transparent 75%), linear-gradient(45deg, transparent 66.85714286%, #0caba8 66.85714286%, #0caba8 73.85714286%, transparent 73.85714286%), linear-gradient(-45deg, transparent 66.85714286%, #0caba8 66.85714286%, #0caba8 73.85714286%, transparent 73.85714286%), linear-gradient(45deg, transparent 65.71428571%, #000 65.71428571%, #000 66.85714286%, transparent 66.85714286%), linear-gradient(-45deg, transparent 65.71428571%, #000 65.71428571%, #000 66.85714286%, transparent 66.85714286%), linear-gradient(45deg, transparent 58.71428571%, #0fc2c0 58.71428571%, #0fc2c0 65.71428571%, transparent 65.71428571%), linear-gradient(-45deg, transparent 58.71428571%, #0fc2c0 58.71428571%, #0fc2c0 65.71428571%, transparent 65.71428571%), linear-gradient(45deg, transparent 57.57142857%, #000 57.57142857%, #000 58.71428571%, transparent 58.71428571%), linear-gradient(-45deg, transparent 57.57142857%, #000 57.57142857%, #000 58.71428571%, transparent 58.71428571%), linear-gradient(45deg, transparent 50.57142857%, #008f8c 50.57142857%, #008f8c 57.57142857%, transparent 57.57142857%), linear-gradient(-45deg, transparent 50.57142857%, #008f8c 50.57142857%, #008f8c 57.57142857%, transparent 57.57142857%), linear-gradient(45deg, transparent 49.42857143%, #000 49.42857143%, #000 50.57142857%, transparent 50.57142857%), linear-gradient(-45deg, transparent 49.42857143%, #000 49.42857143%, #000 50.57142857%, transparent 50.57142857%), linear-gradient(45deg, transparent 42.42857143%, #015958 42.42857143%, #015958 49.42857143%, transparent 49.42857143%), linear-gradient(-45deg, transparent 42.42857143%, #015958 42.42857143%, #015958 49.42857143%, transparent 49.42857143%), linear-gradient(45deg, transparent 41.28571429%, #000 41.28571429%, #000 42.42857143%, transparent 42.42857143%), linear-gradient(-45deg, transparent 41.28571429%, #000 41.28571429%, #000 42.42857143%, transparent 42.42857143%), linear-gradient(45deg, transparent 34.28571429%, #023535 34.28571429%, #023535 41.28571429%, transparent 41.28571429%), linear-gradient(-45deg, transparent 34.28571429%, #023535 34.28571429%, #023535 41.28571429%, transparent 41.28571429%), linear-gradient(45deg, transparent 33.142857143%, #000 33.142857143%, #000 34.28571429%, transparent 34.28571429%), linear-gradient(-45deg, transparent 33.142857143%, #000 33.142857143%, #000 34.28571429%, transparent 34.28571429%);
+  background-image:
+    linear-gradient(
+      45deg,
+      #000,
+      #000 0.5%,
+      #008f8c 0.5%,
+      #008f8c 7.6%,
+      #000 7.6%,
+      #000 8.642857143%,
+      #0fc2c0 8.642857143%,
+      #0fc2c0 15.64285714%,
+      #000 15.64285714%,
+      #000 16.88571429%,
+      #0caba8 16.88571429%,
+      #0caba8 23.84285714%,
+      #000 23.84285714%,
+      #000 25%,
+      transparent 25%
+    ),
+    linear-gradient(
+    -45deg,
+    #000,
+    #000 0.5%,
+    #008f8c 0.5%,
+    #008f8c 7.6%,
+    #000 7.6%,
+    #000 8.642857143%,
+    #0fc2c0 8.642857143%,
+    #0fc2c0 15.64285714%,
+    #000 15.64285714%,
+    #000 16.88571429%,
+    #0caba8 16.88571429%,
+    #0caba8 23.84285714%,
+    #000 23.84285714%,
+    #000 25%,
+    transparent 25%
+  ),
+    linear-gradient(45deg, transparent 73.85714286%, #000 73.85714286%, #000 75%, transparent 75%),
+    linear-gradient(-45deg, transparent 73.85714286%, #000 73.85714286%, #000 75%, transparent 75%),
+    linear-gradient(
+    45deg,
+    transparent 66.85714286%,
+    #0caba8 66.85714286%,
+    #0caba8 73.85714286%,
+    transparent 73.85714286%
+  ),
+    linear-gradient(
+    -45deg,
+    transparent 66.85714286%,
+    #0caba8 66.85714286%,
+    #0caba8 73.85714286%,
+    transparent 73.85714286%
+  ),
+    linear-gradient(45deg, transparent 65.71428571%, #000 65.71428571%, #000 66.85714286%, transparent 66.85714286%),
+    linear-gradient(-45deg, transparent 65.71428571%, #000 65.71428571%, #000 66.85714286%, transparent 66.85714286%),
+    linear-gradient(
+    45deg,
+    transparent 58.71428571%,
+    #0fc2c0 58.71428571%,
+    #0fc2c0 65.71428571%,
+    transparent 65.71428571%
+  ),
+    linear-gradient(
+    -45deg,
+    transparent 58.71428571%,
+    #0fc2c0 58.71428571%,
+    #0fc2c0 65.71428571%,
+    transparent 65.71428571%
+  ),
+    linear-gradient(45deg, transparent 57.57142857%, #000 57.57142857%, #000 58.71428571%, transparent 58.71428571%),
+    linear-gradient(-45deg, transparent 57.57142857%, #000 57.57142857%, #000 58.71428571%, transparent 58.71428571%),
+    linear-gradient(
+    45deg,
+    transparent 50.57142857%,
+    #008f8c 50.57142857%,
+    #008f8c 57.57142857%,
+    transparent 57.57142857%
+  ),
+    linear-gradient(
+    -45deg,
+    transparent 50.57142857%,
+    #008f8c 50.57142857%,
+    #008f8c 57.57142857%,
+    transparent 57.57142857%
+  ),
+    linear-gradient(45deg, transparent 49.42857143%, #000 49.42857143%, #000 50.57142857%, transparent 50.57142857%),
+    linear-gradient(-45deg, transparent 49.42857143%, #000 49.42857143%, #000 50.57142857%, transparent 50.57142857%),
+    linear-gradient(
+    45deg,
+    transparent 42.42857143%,
+    #015958 42.42857143%,
+    #015958 49.42857143%,
+    transparent 49.42857143%
+  ),
+    linear-gradient(
+    -45deg,
+    transparent 42.42857143%,
+    #015958 42.42857143%,
+    #015958 49.42857143%,
+    transparent 49.42857143%
+  ),
+    linear-gradient(45deg, transparent 41.28571429%, #000 41.28571429%, #000 42.42857143%, transparent 42.42857143%),
+    linear-gradient(-45deg, transparent 41.28571429%, #000 41.28571429%, #000 42.42857143%, transparent 42.42857143%),
+    linear-gradient(
+    45deg,
+    transparent 34.28571429%,
+    #023535 34.28571429%,
+    #023535 41.28571429%,
+    transparent 41.28571429%
+  ),
+    linear-gradient(
+    -45deg,
+    transparent 34.28571429%,
+    #023535 34.28571429%,
+    #023535 41.28571429%,
+    transparent 41.28571429%
+  ),
+    linear-gradient(45deg, transparent 33.142857143%, #000 33.142857143%, #000 34.28571429%, transparent 34.28571429%),
+    linear-gradient(-45deg, transparent 33.142857143%, #000 33.142857143%, #000 34.28571429%, transparent 34.28571429%);
   background-size: 100px 100px;
   background-position: 0 0;
 }
@@ -29,7 +145,7 @@ img.splash-screen, img.splash-portrait {
   height: auto;
   object-fit: cover;
   margin-bottom: var(--row-gap-small);
-  border: solid 1px #008F8CFF;
+  border: solid 1px #008f8cff;
   object-position: 50% top;
 }
 
@@ -65,3 +181,7 @@ main {
 .search {
   margin-top: var(--row-gap-small);
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
