--- a/src/styles.css
+++ b/src/styles.css
@@ -1,187 +1,14 @@
-/* Lume's design system */
-@import 'https://unpkg.com/@lumeland/ds@0.5.2/ds.css';
-
-/* Custom components */
-@import 'css/navbar.css';
-@import 'css/post-list.css';
-@import 'css/comments.css';
-@import 'css/404.css';
-
-/* background */
-body {
-  min-height: 100vh;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  background-color: var(--color-background);
-  background-image:
-    linear-gradient(
-      45deg,
-      #000,
-      #000 0.5%,
-      #008f8c 0.5%,
-      #008f8c 7.6%,
-      #000 7.6%,
-      #000 8.642857143%,
-      #0fc2c0 8.642857143%,
-      #0fc2c0 15.64285714%,
-      #000 15.64285714%,
-      #000 16.88571429%,
-      #0caba8 16.88571429%,
-      #0caba8 23.84285714%,
-      #000 23.84285714%,
-      #000 25%,
-      transparent 25%
-    ),
-    linear-gradient(
-    -45deg,
-    #000,
-    #000 0.5%,
-    #008f8c 0.5%,
-    #008f8c 7.6%,
-    #000 7.6%,
-    #000 8.642857143%,
-    #0fc2c0 8.642857143%,
-    #0fc2c0 15.64285714%,
-    #000 15.64285714%,
-    #000 16.88571429%,
-    #0caba8 16.88571429%,
-    #0caba8 23.84285714%,
-    #000 23.84285714%,
-    #000 25%,
-    transparent 25%
-  ),
-    linear-gradient(45deg, transparent 73.85714286%, #000 73.85714286%, #000 75%, transparent 75%),
-    linear-gradient(-45deg, transparent 73.85714286%, #000 73.85714286%, #000 75%, transparent 75%),
-    linear-gradient(
-    45deg,
-    transparent 66.85714286%,
-    #0caba8 66.85714286%,
-    #0caba8 73.85714286%,
-    transparent 73.85714286%
-  ),
-    linear-gradient(
-    -45deg,
-    transparent 66.85714286%,
-    #0caba8 66.85714286%,
-    #0caba8 73.85714286%,
-    transparent 73.85714286%
-  ),
-    linear-gradient(45deg, transparent 65.71428571%, #000 65.71428571%, #000 66.85714286%, transparent 66.85714286%),
-    linear-gradient(-45deg, transparent 65.71428571%, #000 65.71428571%, #000 66.85714286%, transparent 66.85714286%),
-    linear-gradient(
-    45deg,
-    transparent 58.71428571%,
-    #0fc2c0 58.71428571%,
-    #0fc2c0 65.71428571%,
-    transparent 65.71428571%
-  ),
-    linear-gradient(
-    -45deg,
-    transparent 58.71428571%,
-    #0fc2c0 58.71428571%,
-    #0fc2c0 65.71428571%,
-    transparent 65.71428571%
-  ),
-    linear-gradient(45deg, transparent 57.57142857%, #000 57.57142857%, #000 58.71428571%, transparent 58.71428571%),
-    linear-gradient(-45deg, transparent 57.57142857%, #000 57.57142857%, #000 58.71428571%, transparent 58.71428571%),
-    linear-gradient(
-    45deg,
-    transparent 50.57142857%,
-    #008f8c 50.57142857%,
-    #008f8c 57.57142857%,
-    transparent 57.57142857%
-  ),
-    linear-gradient(
-    -45deg,
-    transparent 50.57142857%,
-    #008f8c 50.57142857%,
-    #008f8c 57.57142857%,
-    transparent 57.57142857%
-  ),
-    linear-gradient(45deg, transparent 49.42857143%, #000 49.42857143%, #000 50.57142857%, transparent 50.57142857%),
-    linear-gradient(-45deg, transparent 49.42857143%, #000 49.42857143%, #000 50.57142857%, transparent 50.57142857%),
-    linear-gradient(
-    45deg,
-    transparent 42.42857143%,
-    #015958 42.42857143%,
-    #015958 49.42857143%,
-    transparent 49.42857143%
-  ),
-    linear-gradient(
-    -45deg,
-    transparent 42.42857143%,
-    #015958 42.42857143%,
-    #015958 49.42857143%,
-    transparent 49.42857143%
-  ),
-    linear-gradient(45deg, transparent 41.28571429%, #000 41.28571429%, #000 42.42857143%, transparent 42.42857143%),
-    linear-gradient(-45deg, transparent 41.28571429%, #000 41.28571429%, #000 42.42857143%, transparent 42.42857143%),
-    linear-gradient(
-    45deg,
-    transparent 34.28571429%,
-    #023535 34.28571429%,
-    #023535 41.28571429%,
-    transparent 41.28571429%
-  ),
-    linear-gradient(
-    -45deg,
-    transparent 34.28571429%,
-    #023535 34.28571429%,
-    #023535 41.28571429%,
-    transparent 41.28571429%
-  ),
-    linear-gradient(45deg, transparent 33.142857143%, #000 33.142857143%, #000 34.28571429%, transparent 34.28571429%),
-    linear-gradient(-45deg, transparent 33.142857143%, #000 33.142857143%, #000 34.28571429%, transparent 34.28571429%);
-  background-size: 100px 100px;
-  background-position: 0 0;
-}
-
-img.splash-screen, img.splash-portrait {
-  display: block;
-  max-width: 100%;
-  max-height: 300px;
-  width: 100%;
-  height: auto;
-  object-fit: cover;
-  margin-bottom: var(--row-gap-small);
-  border: solid 1px #008f8cff;
-  object-position: 50% top;
-}
-
-img.splash-screen {
-  max-height: 300px;
-}
-
-img.splash-portrait {
-  max-height: 60vh;
-}
-
-img.splash-screen.max {
-  max-height: 100vh;
-}
-
-/* Make the links black */
-:root {
-  --color-link: var(--color-base);
-  --color-link-hover: var(--color-dim);
-}
-
-/* Page layout */
-main {
-  opacity: 99%;
-  padding: var(--row-gap-small);
-  max-width: min(100% - var(--row-gap-small), 90em);
-  min-height: 70vh;
-  margin: 0 auto;
-  background-color: var(--color-background);
-}
-
-/* Search tweak */
-.search {
-  margin-top: var(--row-gap-small);
-}
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* background */
+body{background-image:linear-gradient(45deg,#000,#000 .5%,#008f8c .5%,#008f8c 7.6%,#000 7.6%,#000 8.642857143%,#0fc2c0 8.642857143%,#0fc2c0 15.64285714%,#000 15.64285714%,#000 16.88571429%,#0caba8 16.88571429%,#0caba8 23.84285714%,#000 23.84285714%,#000 25%,transparent 25%),linear-gradient(-45deg,#000,#000 .5%,#008f8c .5%,#008f8c 7.6%,#000 7.6%,#000 8.642857143%,#0fc2c0 8.642857143%,#0fc2c0 15.64285714%,#000 15.64285714%,#000 16.88571429%,#0caba8 16.88571429%,#0caba8 23.84285714%,#000 23.84285714%,#000 25%,transparent 25%),linear-gradient(45deg,transparent 73.85714286%,#000 73.85714286%,#000 75%,transparent 75%),linear-gradient(-45deg,transparent 73.85714286%,#000 73.85714286%,#000 75%,transparent 75%),linear-gradient(45deg,transparent 66.85714286%,#0caba8 66.85714286%,#0caba8 73.85714286%,transparent 73.85714286%),linear-gradient(-45deg,transparent 66.85714286%,#0caba8 66.85714286%,#0caba8 73.85714286%,transparent 73.85714286%),linear-gradient(45deg,transparent 65.71428571%,#000 65.71428571%,#000 66.85714286%,transparent 66.85714286%),linear-gradient(-45deg,transparent 65.71428571%,#000 65.71428571%,#000 66.85714286%,transparent 66.85714286%),linear-gradient(45deg,transparent 58.71428571%,#0fc2c0 58.71428571%,#0fc2c0 65.71428571%,transparent 65.71428571%),linear-gradient(-45deg,transparent 58.71428571%,#0fc2c0 58.71428571%,#0fc2c0 65.71428571%,transparent 65.71428571%),linear-gradient(45deg,transparent 57.57142857%,#000 57.57142857%,#000 58.71428571%,transparent 58.71428571%),linear-gradient(-45deg,transparent 57.57142857%,#000 57.57142857%,#000 58.71428571%,transparent 58.71428571%),linear-gradient(45deg,transparent 50.57142857%,#008f8c 50.57142857%,#008f8c 57.57142857%,transparent 57.57142857%),linear-gradient(-45deg,transparent 50.57142857%,#008f8c 50.57142857%,#008f8c 57.57142857%,transparent 57.57142857%),linear-gradient(45deg,transparent 49.42857143%,#000 49.42857143%,#000 50.57142857%,transparent 50.57142857%),linear-gradient(-45deg,transparent 49.42857143%,#000 49.42857143%,#000 50.57142857%,transparent 50.57142857%),linear-gradient(45deg,transparent 42.42857143%,#015958 42.42857143%,#015958 49.42857143%,transparent 49.42857143%),linear-gradient(-45deg,transparent 42.42857143%,#015958 42.42857143%,#015958 49.42857143%,transparent 49.42857143%),linear-gradient(45deg,transparent 41.28571429%,#000 41.28571429%,#000 42.42857143%,transparent 42.42857143%),linear-gradient(-45deg,transparent 41.28571429%,#000 41.28571429%,#000 42.42857143%,transparent 42.42857143%),linear-gradient(45deg,transparent 34.28571429%,#023535 34.28571429%,#023535 41.28571429%,transparent 41.28571429%),linear-gradient(-45deg,transparent 34.28571429%,#023535 34.28571429%,#023535 41.28571429%,transparent 41.28571429%),linear-gradient(45deg,transparent 33.142857143%,#000 33.142857143%,#000 34.28571429%,transparent 34.28571429%),linear-gradient(-45deg,transparent 33.142857143%,#000 33.142857143%,#000 34.28571429%,transparent 34.28571429%);background-size:100px 100px;background-position:0 0}
+
+/* 404 */
+.error-404-4 {
+  background-image: url('data:image/svg+xml;utf-8,%3Csvg xmlns="http://www.w3.org/2000/svg" width="159.8" height="89.5" viewBox="0 0 159.8 89.5"%3E%3Cpath fill="%231d2125" d="M60 0L40 11.2V33.6L20 22.4 0 33.6v22.3l60 33.6 39.9-22.3 39.9 22.3 20-11.2V56z"/%3E%3Cpath fill="%23969696" d="M60 5.2l-15.3 8.5L60 22.3l15.3-8.6L60 5.2M20 27.6L4.7 36.2 20 44.7l15.3-8.6L20 27.6M40 38.8l-15.3 8.5L40 55.9l15.3-8.6L40 38.8M79.9 16.4L64.6 25l15.3 8.6L95.1 25l-15.2-8.6M99.9 27.6l-15.3 8.5 15.3 8.6 15.3-8.6-15.3-8.5M80 38.9l-15.3 8.5L80 56l15.3-8.6L80 38.9M119.9 38.9l-15.3 8.5 15.3 8.6 15.3-8.6-15.3-8.5M60 50l-15.3 8.5L60 67.1l15.3-8.6L60 50M139.8 50l-15.3 8.5 15.3 8.6 15.3-8.6-15.3-8.5"/%3E%3C/svg%3E');
+}
+.error-404-0 {
+  background-image: url('data:image/svg+xml;utf-8,%3Csvg xmlns="http://www.w3.org/2000/svg" width="159.8" height="111.8" viewBox="0 0 159.8 111.8"%3E%3Cpath fill="%231d2125" d="M60 0L0 33.6v22.3l99.9 55.9 59.9-33.5V56z"/%3E%3Cpath fill="%23969696" d="M60 5.2l-15.3 8.5L60 22.3l15.3-8.6L60 5.2M40 16.5L24.7 25 40 33.5 55.3 25 40 16.5M20 27.6L4.7 36.2 20 44.7l15.3-8.6L20 27.6M40 38.8l-15.3 8.5L40 55.9l15.3-8.6L40 38.8M79.9 16.4L64.6 25l15.3 8.6L95.1 25l-15.2-8.6M99.9 27.6l-15.3 8.5 15.3 8.6 15.3-8.6-15.3-8.5M119.9 38.9l-15.3 8.5 15.3 8.6 15.3-8.6-15.3-8.5M60 50l-15.3 8.5L60 67.1l15.3-8.6L60 50M80 61.2l-15.3 8.5L80 78.3l15.3-8.6L80 61.2M139.8 50l-15.3 8.5 15.3 8.6 15.3-8.6-15.3-8.5M119.8 61.2l-15.3 8.5 15.3 8.6 15.3-8.6-15.3-8.5M99.9 72.4l-15.3 8.5 15.3 8.6 15.3-8.6-15.3-8.5"/%3E%3C/svg%3E');
+}
